# claudemon

./: .gitignore  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml
extensions/: claudemon.ts
src/: api.ts  app.tsx  auth.ts  config.ts  index.tsx  models.ts
src/claudemon/: __init__.py  __main__.py  api.py  app.py  auth.py  config.py  models.py
src/claudemon/widgets/: __init__.py  header_bar.py  pie_chart.py  stats_panel.py
src/components/: HeaderBar.tsx  PieChart.tsx  StatsPanel.tsx
