[project]
name = "claudemon"
version = "0.1.0"
description = "Claude Usage Monitor TUI - monitor your Claude usage in real-time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.28.0",
    "term-piechart>=0.1.0",
]

[project.scripts]
claudemon = "claudemon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudemon"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
